[package]
default-run = "work"
edition = "2021"
name = "work"
version = "0.1.0"

[dependencies]
actix-web = "4.0.0"
bytes = "*"
colorful = "0.2.1"
crate = "*"
error-chain = "*"
http = "*"
json = "*"
md5 = "*"
openssl = "0.10"
openssl-sys = "0.9"
regex = "1"
reqwest = {version = "0.11", features = ["json"]}
rustls = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
socks = "*"
stream-httparse = "0.2.6"
tokio = {version = "1", features = ["full"]}
toml = "*"
url = "*"
