[package]
default-run = "m3u8"
edition = "2021"
name = "m3u8"
version = "0.1.1"

[dependencies]
clap = {version = "3.1.18", features = ["derive", "env"]}
colorful = "0.2.1"
md5 = "0.7.0"
openssl = "0.10"
openssl-sys = "0.9"
regex = "1.5.5"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
socks = "0.3.4"
toml = "0.5.9"
