[package]
default-run = "web"
edition = "2021"
name = "web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
hls_m3u8 = {version = "0.3", features = ["chrono", "backtrace"]}
lazy_static = "1.4.0"
reqwest = {version = "0.11", features = ["blocking", "json", "socks"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.81"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.2.0"
url = {version = "2"}
